<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".enterprise.auth.EnterpriseLoginFragment">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/logoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_prover_enterprise" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/logoSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoTitle"
        app:srcCompat="@drawable/ic_swype_id" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/enter_server_address"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/addressInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoSubtitle"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/addressInputLayout"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/private_backend_address"
            android:inputType="textUri"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/helpLink"
        app:layout_constraintLeft_toLeftOf="@+id/addressInputLayout"
        app:layout_constraintRight_toRightOf="@+id/addressInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/addressInputLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="?attr/colorPrimary">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <!--    <Button
            android:id="@+id/primaryButton"
            style="@style/Prover.NoActionBar.Button.Dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:enabled="false"
            android:text="@string/connect"
            app:layout_constraintBottom_toTopOf="@+id/helpLink"
            app:layout_constraintLeft_toLeftOf="@+id/addressInputLayout"
            app:layout_constraintRight_toRightOf="@+id/addressInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" /> -->

    <TextView
        android:id="@+id/helpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_transp_primary"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:text="@string/learn_how_to_use_application"
        app:layout_constraintBottom_toTopOf="@+id/bottomSpacer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/bottomSpacer"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="12dp"
        android:background="#F2F2F2"
        app:layout_constraintBottom_toTopOf="@+id/primaryButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_goneMarginBottom="48dp" />

    <Button
        android:id="@+id/primaryButton"
        style="@style/Prover.NoActionBar.Button.Dark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/connect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/addressInputLayout"
        app:layout_constraintRight_toRightOf="@+id/addressInputLayout" />

    <FrameLayout
        android:id="@+id/progressContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#80000000"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progress"
            style="?android:progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>
</android.support.constraint.ConstraintLayout>